# da4cpp

./: .buildinfo  .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  annotated.html  build_docs.sh  classes.html  compile_commands.json  da4cpp_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6ef434f50ba8f59b4b8098ed2e2fb737.html  dir_6ef434f50ba8f59b4b8098ed2e2fb737_dep.map  dir_6ef434f50ba8f59b4b8098ed2e2fb737_dep.md5  dir_d2d28d92a3ea8d39ba34f232b026378e.html  dir_d2d28d92a3ea8d39ba34f232b026378e_dep.map  dir_d2d28d92a3ea8d39ba34f232b026378e_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  gcovr.cfg  genindex.html  globals.html  globals_type.html  graph_8hpp_source.html  graph_legend.html  index.html  introduction.html  menudata.js  namespaceanonymous__namespace_02parsing_8cpp_03.html  namespaceanonymous__namespace_02parsing_8tests_8cpp_03.html  namespaceda4cpp_1_1graph.html  namespaceda4cpp_1_1parsing.html  namespacemembers.html  (+30 more)
.doctrees/: environment.pickle  index.doctree  introduction.doctree
.doctrees/api/: define_parsing_8tests_8cpp_1a623b8690a262536536a43eab2d7df03d.doctree  dir_src.doctree  dir_src_da4cpp.doctree  file_src_da4cpp.cpp.doctree  (+65 more)
_sources/: index.rst.txt  introduction.rst.txt
api/: define_parsing_8tests_8cpp_1a623b8690a262536536a43eab2d7df03d.html  dir_src.html  dir_src_da4cpp.html  enum_namespaceda4cpp_1_1graph_1acb47f4bad707fb2183daf8b515885cf9.html  file_src_da4cpp.cpp.html  file_src_da4cpp.hpp.html  file_src_da4cpp_graph.cpp.html  file_src_da4cpp_graph.hpp.html  file_src_da4cpp_parsing.cpp.html  file_src_da4cpp_parsing.hpp.html  file_src_da4cpp_parsing.tests.cpp.html  file_src_main.cpp.html  function_main_8cpp_1a3c04138a5bfe5d72780bb7e82a18e627.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a0aadd31ac60a10d17fa33a165798ba0a.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a0f6c6e5cc86c194419253e8785fd796c.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a25f53986484be2ac058c92250f530903.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a27ae436fd9b015a24e644bbde3fe1d7e.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a2d8978993a237d43d6cf4e89bbd6954e.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a2e5f4d2119d474a411999a56e841362f.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a5e5476668f221690a8cbd6cf344ea16d.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a76127554ea719311c60dbcfb5b0658fe.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a818da856d671a2d0ca81b2f95f3dfb19.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a8535e931bdbe5a7de0c19059f659d7e5.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a8bf92ac02f27af018c01f386dff0da61.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1a97f9c426f6f9d16ec04104bbeac1db3c.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1abab7bd0f0109068ff38de441e1744d81.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1ac430d3ad690250bf8698fab850116d7d.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1ace99474350c6495751d9fdfd956c103c.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1adf80a2f5cae79ba4804a25cda160a0b2.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1ae5ca2ed8d8b036fa670fea524f681b78.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1ae92d161dbb289c3c10e758429f4b7474.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1aeb5e295d5faa38a298f59077b4879cf5.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1aef45c84c2b40d344682f0914cc3ed8da.html  function_namespaceanonymous__namespace_02parsing_8cpp_03_1af79e03782424be4e1a517055707cd279.html  function_namespaceanonymous__namespace_02parsing_8tests_8cpp_03_1a3c5b333cb92f7e9d930f98bfa2554002.html  function_namespaceanonymous__namespace_02parsing_8tests_8cpp_03_1a7c9838bee5c522f07bb5fa14677885c4.html  function_namespaceanonymous__namespace_02parsing_8tests_8cpp_03_1a82a446d19be51f22543b3d3e888c46b0.html  function_namespaceanonymous__namespace_02parsing_8tests_8cpp_03_1ad8d7cd6e821a8d28002a1f4a2ca9c2bb.html  function_namespaceanonymous__namespace_02parsing_8tests_8cpp_03_1aeb4be9eaa7bf4dee7436b54c5ab0b72a.html  function_namespaceanonymous__namespace_02parsing_8tests_8cpp_03_1af6f563ab94ffedc93c07c4dd3bff8a7e.html  (+29 more)
apps/: CMakeLists.txt
cmake/: CoverageOptions.cmake  DefaultOptions.cmake  Dependencies.cmake  Documentation.cmake  ProjectOptions.cmake  ProjectWarnings.cmake  cpm-package-lock.cmake
da4cpp/: CMakeLists.txt  main.cpp  parsing.cpp  parsing.hpp  parsing.tests.cpp
da4cpp/parsing.tests.resources/: a.out  cyclic_struct_dependency.cpp  function_call.cpp  log.txt  method_declaration.cpp
docs/: conf.py
documentation/: CMakeLists.txt  Doxyfile  conf.py
include/: da4cpp.hpp
integration/find/: CMakeLists.txt
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  namespaces_0.js  namespaces_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_2.js  variables_5.js  variables_6.js
src/: CMakeLists.txt  lib.cpp  main.cpp
src/da4cpp/: CMakeLists.txt  default.profraw  graph.cpp  graph.hpp  parsing.cpp  parsing.hpp  parsing.tests.cpp
src/da4cpp/parsing/: CMakeLists.txt  filters.cpp  filters.hpp  handlers.cpp  handlers.hpp  processors.cpp  processors.hpp
src/da4cpp/parsing.tests.resources/: function_call.cpp  struct_forward_declaration.cpp  struct_reference.cpp
tests/: CMakeLists.txt  parsing.tests.cpp
tests/parsing.tests.resources/: function_call.cpp  struct_forward_declaration.cpp
(+98 files in other folders)
